[gd_scene load_steps=7 format=3 uid="uid://gh7jdkkiyfqk"]

[ext_resource type="Script" path="res://world.gd" id="1_bghh2"]
[ext_resource type="PackedScene" uid="uid://bq81gketa0fy4" path="res://player.tscn" id="2_vd1fa"]
[ext_resource type="PackedScene" uid="uid://bxw2mk833yof2" path="res://enemy.tscn" id="4_btu03"]
[ext_resource type="PackedScene" uid="uid://dkrylpvtar0er" path="res://hud.tscn" id="4_tu8wo"]
[ext_resource type="PackedScene" uid="uid://bot1d4xb6xx3o" path="res://linear_enemy.tscn" id="5_swowc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_01i2q"]
size = Vector2(64, 640)

[node name="world" type="Node2D"]
script = ExtResource("1_bghh2")

[node name="player" parent="." instance=ExtResource("2_vd1fa")]

[node name="left" type="StaticBody2D" parent="."]
position = Vector2(-640, -24)
scale = Vector2(1, 2)

[node name="ColorRect" type="ColorRect" parent="left"]
offset_left = -32.0
offset_top = -320.0
offset_right = 32.0
offset_bottom = 320.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="left"]
shape = SubResource("RectangleShape2D_01i2q")

[node name="right" type="StaticBody2D" parent="."]
position = Vector2(-392, 40)
rotation = -6.28319
scale = Vector2(1, 2)

[node name="ColorRect" type="ColorRect" parent="right"]
offset_left = 1000.0
offset_top = -320.0
offset_right = 1064.0
offset_bottom = 320.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="right"]
position = Vector2(1032, 0.000180441)
shape = SubResource("RectangleShape2D_01i2q")

[node name="up" type="StaticBody2D" parent="."]
position = Vector2(32, -632)
rotation = 1.5708
scale = Vector2(1, 2)

[node name="ColorRect" type="ColorRect" parent="up"]
offset_left = -32.0
offset_top = -320.0
offset_right = 32.0
offset_bottom = 320.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="up"]
shape = SubResource("RectangleShape2D_01i2q")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-32, 648)
rotation = 1.5708
scale = Vector2(1, 2)

[node name="ColorRect" type="ColorRect" parent="StaticBody2D"]
offset_left = -32.0
offset_top = -320.0
offset_right = 32.0
offset_bottom = 320.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_01i2q")

[node name="enemy" parent="." instance=ExtResource("4_btu03")]
position = Vector2(-256, 0)

[node name="enemySpawn" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("4_tu8wo")]

[node name="linearEnemy" parent="." instance=ExtResource("5_swowc")]
position = Vector2(320, 0)

[connection signal="timeout" from="enemySpawn" to="." method="_on_enemy_spawn_timeout"]
